@@ -65,6 +65,8 @@
                It is likely that analyzing a filter file with a version of SpecTcl that retains its raw event unpackers
                will result in SpecTcl crashing.</p>
             <br><br><a href="#top">Top</a>
+        <h3>Detach</h3>
+	   <p>Detaches SpecTcl from all data sources. </p>
 
     </body>
 </html>
