@@ -712,3 +712,8 @@ October 12, 2007 - Make multicolored monster understand Gamman deluxe spectra.
 October 15, 2007 - Redid a bunch of stuff with the test data sources to 
             allow attach, re-attach , re-re attach etc.  Don't think there
             are any memory leaks.
+October 23, 2007 - Add detach menu entry.. really stops processing and does an
+                   attach -file /dev/null 
+                 - added version specific daq locations to search path for
+                   spectcldaq (gui).
+
